# task_mail

./: .replit  app.py  auth.py  chat_request.py  email_generator.py  extensions.py  google_credentials.json  main.py  models.py  pdf_analyzer.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  routes.py  test_data.py  test_excel_upload.py  utils.py
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: repl_state.json
.upm/: store.json
static/css/: custom.css
static/js/: main.js
templates/: base.html  dashboard.html  index.html  upload.html
templates/auth/: login.html  register.html
uploads/: Prototype.xlsx  test_tasks.xlsx
