[project]
name = "repl-nix-taskmailbotanalyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "openai>=1.52.0",
    "openpyxl>=3.1.5",
    "pypdf2>=3.0.1",
    "flask-login>=0.6.3",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.149.0",
    "python-docx>=1.1.2",
    "google-auth>=2.35.0",
    "werkzeug",
    "sqlalchemy",
    "pandas",
    "reportlab",
    "requests",
    "pillow",
    "flask-cors>=5.0.0",
    "python-dotenv",
]
